src/test/ui/codemap_tests/tab_2.stderr
error: unterminated double quote string
  --> $DIR/tab_2.rs:4:7
   |
LL |                   """;
   |  ___________________^
LL | | }
   | |__^

error: aborting due to previous error

